<resources>
    <string name="app_name">Welcome 2</string>

    <string name="sign_in_to_continue">Sign in to Continue!</string>
    <string name="welcome">Welcome</string>

    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_hint">Email Address</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="image">image</string>
    <string name="image2">Image2</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>

</resources>